--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 									<li><a href="estudio.html">Fotos</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Diseño de Interiores</a></li>
+							<li><a href="interiores.html">Diseño de Interiores</a></li>
 							<li><a href="contacto.html">Contacto</a></li>
-							<li><a href="#">Instagram</a></li>
+							<li><a href="instagram.html">Instagram</a></li>
 
 						</ul>
 					</nav>
