--- a/desarrollos.html
+++ b/desarrollos.html
@@ -135,100 +135,100 @@
 
 			</div>
 			<footer class="footer-section">
-	        <div class="container">
-	            <div class="footer-cta pt-5 pb-5">
-	                <div class="row">
-	                    <div class="col-xl-4 col-md-4 mb-30">
-	                        <div class="single-cta">
-	                            <i class="fa fa-map-marker"></i>
-	                            <div class="cta-text">
-	                                <h4>Ubicacion</h4>
-	                                <span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
-	                            </div>
+	      <div class="container">
+	          <div class="footer-cta">
+	            <div class="row">
+	                <div class="col-xs-12 col-md-4">
+	                    <div class="single-cta">
+	                        <i class="fa fa-map-marker"></i>
+	                        <div class="cta-text">
+	                            <h4>Ubicacion</h4>
+	                            <span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
 	                        </div>
 	                    </div>
-	                    <div class="col-xl-4 col-md-4 mb-30">
-	                        <div class="single-cta">
-	                            <i class="fa fa-phone"></i>
-	                            <div class="cta-text">
-	                                <h4>Llamanos</h4>
-	                                <span>4737.0086</span>
-	                            </div>
+	                </div>
+	                <div class="col-xs-12 col-md-4">
+	                    <div class="single-cta">
+	                        <i class="fa fa-phone"></i>
+	                        <div class="cta-text">
+	                            <h4>Llamanos</h4>
+	                            <span>4737.0086</span>
 	                        </div>
 	                    </div>
-	                    <div class="col-xl-4 col-md-4 mb-30">
-	                        <div class="single-cta">
-	                            <i class="fa fa-envelope"></i>
-	                            <div class="cta-text">
-	                                <h4>Email</h4>
-	                                <span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
-	                            </div>
+	                </div>
+	                <div class="col-xs-12 col-md-4">
+	                    <div class="single-cta">
+	                        <i class="fa fa-envelope"></i>
+	                        <div class="cta-text">
+	                            <h4>Email</h4>
+	                            <span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
 	                        </div>
 	                    </div>
 	                </div>
 	            </div>
-	            <div class="footer-content">
-	                <div class="row">
-	                    <div class="col-xl-4 col-lg-4">
-	                        <div class="footer-widget">
-	                            <div class="footer-logo">
-	                                <a href="index.html"><img src="./img/logo-w.png" class="img-fluid" alt="logo"></a>
-	                            </div>
-	                            <div class="footer-text">
-	                                <p>Pacífica Arquitectura, estudio con sede en Buenos Aires, dedicado principalmente a realizar diseños y construcción de casas de alta gama, edificios, ambientación y decoración.</p>
-	                            </div>
-	                        </div>
-	                    </div>
-	                    <div class="col-xl-4 col-lg-4 col-md-6">
-	                        <div class="footer-widget">
-	                            <div class="footer-widget-heading">
-	                                <h3>Sitio</h3>
-	                            </div>
-	                            <ul>
-																														<li><a href="portfolio.html">Casas</a></li>
-																														<li><a href="lifestyle.html">Lifestyle</a></li>
-																														<li><a href="desarrollos.html">Desarrollos</a></li>
-																														<li><a href="quienesomos.html">Quienes Somos</a></li>
-																														<li><a href="estudio.html">Fotos</a></li>
-																														<li><a href="interiores.html">Diseño de Interiores</a></li>
-																														<li><a href="contacto.html">Contacto</a></li>
-																														<li><a href="instagram.html">Instagram</a></li>
-	                            </ul>
-	                        </div>
-	                    </div>
-	                    <div class="col-xl-4 col-lg-4 col-md-6">
-	                        <div class="footer-widget">
-	                            <div class="footer-widget-heading">
-	                                <h3>Seguinos</h3>
-	                            </div>
-	                            <div class="single-cta">
-	                                <a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
-	                            </div>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	        <div class="copyright-area">
-	            <div class="container container-copy">
-	                <div class="row">
-	                    <div class="col-xl-6 col-lg-6 col-xs-7">
-	                        <div class="copyright-text">
-	                            <p>© Copyright 2018 Pacifica</p>
-	                        </div>
-	                    </div>
-	                    <div class="col-xl-6 col-lg-6 col-xs-5 text-right">
-	                        <div class="footer-menu">
-	                            <ul>
-	                                <li><a href="index.html">Home</a></li>
-	                                <li><a href="contacto.html">Contact</a></li>
-	                            </ul>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	    </footer>
+	          </div>
+	          <div class="footer-content">
+	              <div class="row">
+	                  <div class="col-xs-12 col-md-4">
+	                      <div class="footer-widget">
+	                          <div class="footer-logo">
+	                              <a href="index.html"><img src="./img/logo-w.png" class="img-fluid" alt="logo"></a>
+	                          </div>
+	                          <div class="footer-text">
+	                              <p>Pacífica Arquitectura, estudio con sede en Buenos Aires, dedicado principalmente a realizar diseños y construcción de casas de alta gama, edificios, ambientación y decoración.</p>
+	                          </div>
+	                      </div>
+	                  </div>
+	                  <div class="col-xs-12 col-md-4">
+	                      <div class="footer-widget">
+	                          <div class="footer-widget-heading">
+	                              <h3>Sitio</h3>
+	                          </div>
+	                          <ul>
+																												<li><a href="portfolio.html">Casas</a></li>
+																												<li><a href="lifestyle.html">Lifestyle</a></li>
+																												<li><a href="desarrollos.html">Desarrollos</a></li>
+																												<li><a href="quienesomos.html">Quienes Somos</a></li>
+																												<li><a href="estudio.html">Fotos</a></li>
+																												<li><a href="interiores.html">Diseño de Interiores</a></li>
+																												<li><a href="contacto.html">Contacto</a></li>
+																												<li><a href="instagram.html">Instagram</a></li>
+	                          </ul>
+	                      </div>
+	                  </div>
+	                  <div class="col-xs-12 col-md-4">
+	                      <div class="footer-widget">
+	                          <div class="footer-widget-heading">
+	                              <h3>Seguinos</h3>
+	                          </div>
+	                          <div class="single-cta">
+	                              <a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
+	                          </div>
+	                      </div>
+	                  </div>
+	              </div>
+	          </div>
+	      </div>
+	      <div class="copyright-area">
+	          <div class="container container-copy">
+	              <div class="row">
+	                  <div class="col-xl-6 col-lg-6 col-xs-7">
+	                      <div class="copyright-text">
+	                          <p>© Copyright 2018 Pacifica</p>
+	                      </div>
+	                  </div>
+	                  <div class="col-xl-6 col-lg-6 col-xs-5 text-right">
+	                      <div class="footer-menu">
+	                          <ul>
+	                              <li><a href="index.html">Home</a></li>
+	                              <li><a href="contacto.html">Contact</a></li>
+	                          </ul>
+	                      </div>
+	                  </div>
+	              </div>
+	          </div>
+	      </div>
+	  </footer>
 
 			<!-- Portfolio full -->
 			<div id="jingenieros" class="portfolio-full portfolio-full-slidedown">
