--- a/index.html
+++ b/index.html
@@ -1,245 +1,241 @@
 <!doctype html>
 <html lang="es">
-	<head>
 
-		<!-- Meta -->
-		<meta charset="UTF-8">
-		<title>PACIFICA | Arquitectura</title>
-		<meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
-		<meta name="description" content="Pacifica - Estudio de Arquitectura">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
 
-		<!-- Favicons -->
-		<!-- <link rel="shortcut icon" href="img/favicons/favicon.png">
+	<!-- Meta -->
+	<meta charset="UTF-8">
+	<title>PACIFICA | Arquitectura</title>
+	<meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
+	<meta name="description" content="Pacifica - Estudio de Arquitectura">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- Favicons -->
+	<!-- <link rel="shortcut icon" href="img/favicons/favicon.png">
 		<link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-touch-icon-114x114.png"> -->
 
-		<!-- CSS -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="css/idangerous.swiper.css">
-		<link rel="stylesheet" href="css/style.css">
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/idangerous.swiper.css">
+	<link rel="stylesheet" href="css/style.css">
 
-	</head>
+</head>
 
-	<body>
+<body>
 
 
-		<!-- Overlay -->
-		<div id="overlay"></div>
+	<!-- Overlay -->
+	<div id="overlay"></div>
 
-		<!-- Top header -->
-		<div id="top">
+	<!-- Top header -->
+	<div id="top">
 
-			<!-- Sidebar button -->
-			<a href="#" id="sidebar-button"></a>
+		<!-- Sidebar button -->
+		<a href="#" id="sidebar-button"></a>
 
-			<!-- Logo -->
-			<header id="logo">
-        <a href="index.html"><img src="img/logo.png" alt=""></a>
-				<!-- <h1>Pacifica</h1>
+		<!-- Logo -->
+		<header id="logo">
+			<a href="index.html"><img src="img/logo.png" alt=""></a>
+			<!-- <h1>Pacifica</h1>
 				<h2>Ezequiel Gil <strong>Arquitecto</strong></h2> -->
-			</header>
+		</header>
 
-			<!-- Fullscreen slider navigation arrows -->
-			<nav id="nav-arrows">
-				<a href="#" class="nav-left hidden"></a>
-				<a href="#" class="nav-right"></a>
-			</nav>
+		<!-- Fullscreen slider navigation arrows -->
+		<nav id="nav-arrows">
+			<a href="#" class="nav-left hidden"></a>
+			<a href="#" class="nav-right"></a>
+		</nav>
+
+	</div>
+
+	<!-- Main wrapper -->
+	<div id="main-wrapper">
+
+		<!-- Content -->
+		<div id="content">
+
+			<!-- Fullscreen slider -->
+			<div id="fullscreen-slider" class="swiper-container swiper-home">
+				<div class="swiper-wrapper">
+					<!-- Slide -->
+					<div class="swiper-slide overlay overlay-grid-2">
+						<video id="wave" width="853" height="480" playsinline autobuffer autoplay loop>
+							<source src="img/slide_1.ogg" type="video/ogg">
+							<source src="img/slide_1.mp4" type="video/mp4">
+							<source src="img/slide_1.webm" type="video/webm">
+						</video>
+						<h1><img src="./img/logo-w.png" alt=""></h1>
+					</div>
+					<!-- Slide -->
+					<div class="swiper-slide overlay " style="background-image: url('img/slide_2.jpg')">
+						<!-- <h1>Less is more, more or less</h1> -->
+					</div>
+					<!-- Slide -->
+					<div class="swiper-slide overlay " style="background-image: url('img/slide_3.jpg')">
+						<!-- <h1>Robust, clean, comfortable</h1> -->
+					</div>
+					<!-- Slide -->
+					<div class="swiper-slide overlay " style="background-image: url('img/slide_4.jpg')">
+						<!-- <h1>Showcase your work with Rayleigh</h1> -->
+					</div>
+					<!-- Slide -->
+					<div class="swiper-slide overlay " style="background-image: url('img/slide_5.jpg')">
+						<!-- <h1>Showcase your work with Rayleigh</h1> -->
+					</div>
+					<!-- Slide -->
+
+				</div>
+			</div>
 
 		</div>
 
-		<!-- Main wrapper -->
-		<div id="main-wrapper">
+		<!-- Collapsible sidebar -->
+		<div id="sidebar">
 
-			<!-- Content -->
-			<div id="content">
+			<!-- Widget Area -->
+			<div id="widgets">
 
-				<!-- Fullscreen slider -->
-				<div id="fullscreen-slider" class="swiper-container swiper-home" >
-					<div class="swiper-wrapper">
-						<!-- Slide -->
-						<div class="swiper-slide overlay overlay-grid-2" >
-							<video id="wave" width="853" height="480" playsinline autobuffer autoplay loop>
-								<source  src="img/slide_1.ogg" type="video/ogg" >
-								<source  src="img/slide_1.mp4" type="video/mp4" >
-								<source  src="img/slide_1.webm" type="video/webm" >
-							</video>
-							<h1><img src="./img/logo-w.png" alt=""></h1>
-						</div>
-						<!-- Slide -->
-						<div class="swiper-slide overlay " style="background-image: url('img/slide_2.jpg')">
-							<!-- <h1>Less is more, more or less</h1> -->
-						</div>
-						<!-- Slide -->
-						<div class="swiper-slide overlay " style="background-image: url('img/slide_3.jpg')">
-							<!-- <h1>Robust, clean, comfortable</h1> -->
-						</div>
-						<!-- Slide -->
-						<div class="swiper-slide overlay " style="background-image: url('img/slide_4.jpg')">
-							<!-- <h1>Showcase your work with Rayleigh</h1> -->
-						</div>
-						<!-- Slide -->
-						<div class="swiper-slide overlay " style="background-image: url('img/slide_5.jpg')">
-							<!-- <h1>Showcase your work with Rayleigh</h1> -->
-						</div>
-						<!-- Slide -->
-						<div class="swiper-slide overlay overlay-grid-2">
-							<video id="casa" width="853" height="480" playsinline autobuffer autoplay loop>
-								<source  src="img/slide_6.ogg" type="video/ogg" >
-								<source  src="img/slide_6.mp4" type="video/mp4" >
-								<source  src="img/slide_6.webm" type="video/webm" >
-							</video>
-							<h1>CASA CINCO FUEGOS</h1>
-						</div>
+				<!-- Main menu -->
+				<nav id="mainmenu">
+					<ul>
+						<li><a href="portfolio.html">Casas</a></li>
+						<li><a href="lifestyle.html">Lifestyle</a></li>
+						<li><a href="desarrollos.html">Desarrollos</a></li>
+						<li><a href="#">El Estudio</a>
+							<ul>
+								<li><a href="quienesomos.html">Quienes Somos</a></li>
+								<li><a href="estudio.html">Fotos</a></li>
+							</ul>
+						</li>
+						<li><a href="interiores.html">Diseño de Interiores</a></li>
+						<li><a href="contacto.html">Contacto</a></li>
+						<li><a href="instagram.html">Instagram</a></li>
 
+					</ul>
+				</nav>
+
+			</div>
+
+			<!-- Copyright -->
+			<div>
+				<p class="copyright">© Copyright 2018 Pacifica</p>
+			</div>
+
+		</div>
+
+	</div>
+	<footer class="footer-section">
+		<div class="container">
+			<div class="footer-cta">
+				<div class="row">
+					<div class="col-xs-12 col-md-4">
+						<div class="single-cta">
+							<i class="fa fa-map-marker"></i>
+							<div class="cta-text">
+								<h4>Ubicacion</h4>
+								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-4">
+						<div class="single-cta">
+							<i class="fa fa-phone"></i>
+							<div class="cta-text">
+								<h4>Llamanos</h4>
+								<span>4737.0086</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-4">
+						<div class="single-cta">
+							<i class="fa fa-envelope"></i>
+							<div class="cta-text">
+								<h4>Email</h4>
+								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+							</div>
+						</div>
 					</div>
 				</div>
-
 			</div>
-
-			<!-- Collapsible sidebar -->
-			<div id="sidebar">
-
-				<!-- Widget Area -->
-				<div id="widgets">
-
-					<!-- Main menu -->
-					<nav id="mainmenu">
-						<ul>
-							<li><a href="portfolio.html">Casas</a></li>
-							<li><a href="lifestyle.html">Lifestyle</a></li>
-							<li><a href="desarrollos.html">Desarrollos</a></li>
-							<li><a href="#">El Estudio</a>	<ul>
-									<li><a href="quienesomos.html">Quienes Somos</a></li>
-									<li><a href="estudio.html">Fotos</a></li>
-								</ul>
-							</li>
-							<li><a href="interiores.html">Diseño de Interiores</a></li>
-							<li><a href="contacto.html">Contacto</a></li>
-							<li><a href="instagram.html">Instagram</a></li>
-
-						</ul>
-					</nav>
-
+			<div class="footer-content">
+				<div class="row">
+					<div class="col-xs-12 col-md-4">
+						<div class="footer-widget">
+							<div class="footer-logo">
+								<a href="index.html"><img src="./img/logo-w.png" class="img-fluid" alt="logo"></a>
+							</div>
+							<div class="footer-text">
+								<p>Pacífica Arquitectura, estudio con sede en Buenos Aires, dedicado principalmente a realizar diseños y
+									construcción de casas de alta gama, edificios, ambientación y decoración.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-4">
+						<div class="footer-widget">
+							<div class="footer-widget-heading">
+								<h3>Sitio</h3>
+							</div>
+							<ul>
+								<li><a href="portfolio.html">Casas</a></li>
+								<li><a href="lifestyle.html">Lifestyle</a></li>
+								<li><a href="desarrollos.html">Desarrollos</a></li>
+								<li><a href="quienesomos.html">Quienes Somos</a></li>
+								<li><a href="estudio.html">Fotos</a></li>
+								<li><a href="interiores.html">Diseño de Interiores</a></li>
+								<li><a href="contacto.html">Contacto</a></li>
+								<li><a href="instagram.html">Instagram</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-4">
+						<div class="footer-widget">
+							<div class="footer-widget-heading">
+								<h3>Seguinos</h3>
+							</div>
+							<div class="single-cta">
+								<a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
+							</div>
+						</div>
+					</div>
 				</div>
-
-				<!-- Copyright -->
-				<div>
-					<p class="copyright">© Copyright 2018 Pacifica</p>
-				</div>
-
 			</div>
-
 		</div>
-		<footer class="footer-section">
-      <div class="container">
-          <div class="footer-cta">
-            <div class="row">
-                <div class="col-xs-12 col-md-4">
-                    <div class="single-cta">
-                        <i class="fa fa-map-marker"></i>
-                        <div class="cta-text">
-                            <h4>Ubicacion</h4>
-                            <span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <div class="single-cta">
-                        <i class="fa fa-phone"></i>
-                        <div class="cta-text">
-                            <h4>Llamanos</h4>
-                            <span>4737.0086</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <div class="single-cta">
-                        <i class="fa fa-envelope"></i>
-                        <div class="cta-text">
-                            <h4>Email</h4>
-                            <span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-          </div>
-          <div class="footer-content">
-              <div class="row">
-                  <div class="col-xs-12 col-md-4">
-                      <div class="footer-widget">
-                          <div class="footer-logo">
-                              <a href="index.html"><img src="./img/logo-w.png" class="img-fluid" alt="logo"></a>
-                          </div>
-                          <div class="footer-text">
-                              <p>Pacífica Arquitectura, estudio con sede en Buenos Aires, dedicado principalmente a realizar diseños y construcción de casas de alta gama, edificios, ambientación y decoración.</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-xs-12 col-md-4">
-                      <div class="footer-widget">
-                          <div class="footer-widget-heading">
-                              <h3>Sitio</h3>
-                          </div>
-                          <ul>
-																											<li><a href="portfolio.html">Casas</a></li>
-																											<li><a href="lifestyle.html">Lifestyle</a></li>
-																											<li><a href="desarrollos.html">Desarrollos</a></li>
-																											<li><a href="quienesomos.html">Quienes Somos</a></li>
-																											<li><a href="estudio.html">Fotos</a></li>
-																											<li><a href="interiores.html">Diseño de Interiores</a></li>
-																											<li><a href="contacto.html">Contacto</a></li>
-																											<li><a href="instagram.html">Instagram</a></li>
-                          </ul>
-                      </div>
-                  </div>
-                  <div class="col-xs-12 col-md-4">
-                      <div class="footer-widget">
-                          <div class="footer-widget-heading">
-                              <h3>Seguinos</h3>
-                          </div>
-                          <div class="single-cta">
-                              <a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="copyright-area">
-          <div class="container container-copy">
-              <div class="row">
-                  <div class="col-xl-6 col-lg-6 col-xs-7">
-                      <div class="copyright-text">
-                          <p>© Copyright 2018 Pacifica</p>
-                      </div>
-                  </div>
-                  <div class="col-xl-6 col-lg-6 col-xs-5 text-right">
-                      <div class="footer-menu">
-                          <ul>
-                              <li><a href="index.html">Home</a></li>
-                              <li><a href="contacto.html">Contact</a></li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </footer>
+		<div class="copyright-area">
+			<div class="container container-copy">
+				<div class="row">
+					<div class="col-xl-6 col-lg-6 col-xs-7">
+						<div class="copyright-text">
+							<p>© Copyright 2018 Pacifica</p>
+						</div>
+					</div>
+					<div class="col-xl-6 col-lg-6 col-xs-5 text-right">
+						<div class="footer-menu">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="contacto.html">Contact</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
-		<!-- JavaScripts -->
-		<script type='text/javascript' src='js/jquery.min.js'></script>
-		<script type='text/javascript' src='js/bootstrap.min.js'></script>
-		<script type='text/javascript' src="./js/swiper/idangerous.swiper.min.js"></script>
-		<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
-		<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
-		<script type='text/javascript' src='js/custom.js'></script>
+	<!-- JavaScripts -->
+	<script type='text/javascript' src='js/jquery.min.js'></script>
+	<script type='text/javascript' src='js/bootstrap.min.js'></script>
+	<script type='text/javascript' src="./js/swiper/idangerous.swiper.min.js"></script>
+	<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
+	<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
+	<script type='text/javascript' src='js/custom.js'></script>
 
 
-	</body>
+</body>
+
 </html>
