Corrección Cinco Fuegos

--- a/portfolio.html
+++ b/portfolio.html
@@ -284,12 +284,12 @@
 					<h3>CINCO FUEGOS</h3>
 					<div class="icon-text">
 						<i class="fa fa-map-marker"></i>
-						<p>Buenos Aires - 250 M2</p>
+						<p>Buenos Aires - 300 M2</p>
 					</div>
-					<div class="icon-text">
+					<!-- <div class="icon-text">
 						<i class="fa fa-users"></i>
 						<p>Construcción: Insaco S.A</p>
-					</div>
+					</div> -->
 
 				</div>
 
