--- a/portfolio.html
+++ b/portfolio.html
@@ -81,19 +81,6 @@
 								<h2></h2>
 							</header>
 
-							<!-- Filters -->
-							<div class="filter-dropdown">
-								<div class="selected"><span class="name">Filtros</span> <span class="val">Todas</span></div>
-								<!-- <ul>
-									<li data-filter="*">All</li>
-									<li data-filter=".3d">3D</li>
-									<li data-filter=".buildings">Buildings</li>
-									<li data-filter=".design">Design</li>
-									<li data-filter=".nature">Nature</li>
-								</ul> -->
-								<div class="arrow"></div>
-							</div>
-
 						</div>
 					</div>
 
@@ -102,7 +89,7 @@
 
 						<!-- Portfolio item -->
 						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="#cincofuegos" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)"></a>
+							<a href="#primero" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)"></a>
 						</article>
 
 						<!-- Portfolio item -->
@@ -290,7 +277,7 @@
 			</div>
 
 			<!-- Portfolio full -->
-			<div id="cincofuegos" class="portfolio-full portfolio-full-slidedown">
+			<div id="primero" class="portfolio-full portfolio-full-slidedown">
 
 				<!-- Portfolio description -->
 				<div class="portfolio-description">
