--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<div class="swiper-wrapper">
 					<!-- Slide -->
 					<div class="swiper-slide overlay overlay-grid-2">
-						<video id="wave" width="853" height="480" playsinline autobuffer autoplay muted loop>
+						<video id="wave" width="853" height="480" autoplay muted playsinline loop>
 							<source src="img/slide_1.ogg" type="video/ogg">
 							<source src="img/slide_1.mp4" type="video/mp4">
 							<source src="img/slide_1.webm" type="video/webm">
