Nuevo Quienes Somos

--- a/desarrollos.html
+++ b/desarrollos.html
@@ -91,22 +91,42 @@
 
 						<!-- Portfolio item -->
 						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="#jingenieros" class="image" style="background-image: url(img/desarrollos/jingenierios_portada.jpg)"></a>
+							<a href="#jingenieros" class="image" style="background-image: url(img/desarrollos/jingenierios_portada.jpg)">
+								<div class="content-overlay"></div>
+								<div class="content-details fadeIn-right">
+									<h3 class="content-title">JOSÉ INGENIEROS</h3>
+								</div>
+							</a>
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="" class="image" style="background-image: url(img/desarrollos/brasil_portada.jpg)"></a>
+							<a href="" class="image" style="background-image: url(img/desarrollos/brasil_portada.jpg)">
+								<div class="content-overlay"></div>
+								<div class="content-details fadeIn-right">
+									<h3 class="content-title">EDIFICIO BRASIL</h3>
+								</div>
+							</a>
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="" class="image" style="background-image: url(img/desarrollos/rincon_portada.jpg)"></a>
+							<a href="" class="image" style="background-image: url(img/desarrollos/rincon_portada.jpg)">
+								<div class="content-overlay"></div>
+								<div class="content-details fadeIn-right">
+									<h3 class="content-title">RINCÓN DEL INDIO</h3>
+								</div>
+							</a>
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="" class="image" style="background-image: url(img/desarrollos/edpacifica_portada.jpg)"></a>
+							<a href="" class="image" style="background-image: url(img/desarrollos/edpacifica_portada.jpg)">
+								<div class="content-overlay"></div>
+								<div class="content-details fadeIn-right">
+									<h3 class="content-title">EDIFICIO PACÍFICA</h3>
+								</div>
+							</a>
 						</article>
 
 					</div>
