--- a/quienesomos_2.html
+++ b/quienesomos_2.html
@@ -93,7 +93,7 @@
 
 						<!-- Personal profile -->
 						<!-- <article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_01.jpg)"></a>
+							<div class="image" style="background-image: url(img/team/quienesomos_01.jpg)"></a>
 							<div class="inner">
 								<header>
 									<h3>Ezequiel Gil</h3>
@@ -103,11 +103,12 @@
 						</article> -->
 
 						<!-- Personal profile -->
-						<article class="portfolio portfolio-todos team-card col-12">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_todos.jpg)"></div>
+						<article class="personal-profile team-card col-12">
+							<div class="image" style="background-image: url(img/team/quienesomos_01.jpg)"></div>
 							<div class="inner">
 								<header>
-									<h3><address class="author fn">PACIFICA Arquitectura</address></h3>
+									<h3><address class="author fn">Ezequiel Gil</address></h3>
+									<h4>Arquitecto. Socio</h4>
 								</header>
 								<p>El Arq. Ezequiel Gil co-fundador del estudio entiende que la versatilidad y la arquitectura desde un punto de vista del disfrute son los aspectos fundamentales a la hora de crear. Pacífica considera sumamente importante escuchar las ideas de los clientes y su plan de necesidades para luego plasmarlo en el diseño. Se busca entender qué es lo que el usuario necesita para disfrutar del confort y calidez de su casa las 4 estaciones del año. <br>El corolario de todos estos factores (estética, diseño, lujo iluminación y funcionalidad) combinados equilibradamente arrojan un producto terminado de excelencia.</p>
 							</div>
@@ -115,17 +116,7 @@
 
 						<!-- Personal profile -->
 						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_01.jpg)"></div>
-							<div class="inner">
-								<header>
-									<h3>Ezequiel Gil</h3>
-									<p>Arquitecto Socio</p>
-								</header>
-							</div>
-						</article>
-						<!-- Personal profile -->
-						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_02.jpg)"></div>
+							<div class="image" style="background-image: url(img/team/quienesomos_02.jpg)"></div>
 							<div class="inner">
 								<header>
 									<h3>Félix Gil</h3>
@@ -136,7 +127,7 @@
 
 						<!-- Personal profile -->
 						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_03.jpg)"></div>
+							<div class="image" style="background-image: url(img/team/quienesomos_03.jpg)"></div>
 							<div class="inner">
 								<header>
 									<h3>Verónica Jijena Sánchez</h3>
@@ -147,7 +138,7 @@
 
 						<!-- Personal profile -->
 						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_04.jpg)"></div>
+							<div class="image" style="background-image: url(img/team/quienesomos_04.jpg)"></div>
 							<div class="inner">
 								<header>
 									<h3>Belén Putruele</h3>
@@ -158,7 +149,7 @@
 
 						<!-- Personal profile -->
 						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_05.jpg)"></div>
+							<div class="image" style="background-image: url(img/team/quienesomos_05.jpg)"></div>
 							<div class="inner">
 								<header>
 									<h3>Martín Bayley</h3>
@@ -169,7 +160,7 @@
 
 						<!-- Personal profile -->
 						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_06.jpg)"></div>
+							<div class="image" style="background-image: url(img/team/quienesomos_06.jpg)"></div>
 							<div class="inner">
 								<header>
 									<h3>Gastón Vernengo Lima</h3>
@@ -180,7 +171,7 @@
 
 						<!-- Personal profile -->
 						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_07.jpg)"></div>
+							<div class="image" style="background-image: url(img/team/quienesomos_07.jpg)"></div>
 							<div class="inner">
 								<header>
 									<h3>Milagros García Blanco</h3>
@@ -191,7 +182,7 @@
 
 						<!-- Personal profile -->
 						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_08.jpg)"></div>
+							<div class="image" style="background-image: url(img/team/quienesomos_08.jpg)"></div>
 							<div class="inner">
 								<header>
 									<h3>Juana Sichiny</h3>
@@ -202,7 +193,7 @@
 
 						<!-- Personal profile -->
 						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_09.jpg)"></div>
+							<div class="image" style="background-image: url(img/team/quienesomos_09.jpg)"></div>
 							<div class="inner">
 								<header>
 									<h3>Joaquín Primon</h3>
