Ajustes Porftolio y Footer

--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
 						<div class="single-cta">
 							<i class="fa fa-map-marker"></i>
 							<div class="cta-text">
-								<h4>Ubicacion</h4>
 								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
 							</div>
 						</div>
@@ -160,7 +159,6 @@
 						<div class="single-cta">
 							<i class="fa fa-phone"></i>
 							<div class="cta-text">
-								<h4>Llamanos</h4>
 								<span>4737.0086</span>
 							</div>
 						</div>
@@ -169,7 +167,6 @@
 						<div class="single-cta">
 							<i class="fa fa-envelope"></i>
 							<div class="cta-text">
-								<h4>Email</h4>
 								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
 							</div>
 						</div>
@@ -178,17 +175,6 @@
 			</div>
 			<div class="footer-content">
 				<div class="row">
-					<div class="col-xs-12 col-md-4">
-						<div class="footer-widget">
-							<div class="footer-logo">
-								<a href="index.html"><img src="./img/logo-w.png" class="img-fluid" alt="logo"></a>
-							</div>
-							<div class="footer-text">
-								<p>Pacífica Arquitectura, estudio con sede en Buenos Aires, dedicado principalmente a realizar diseños y
-									construcción de casas de alta gama, edificios, ambientación y decoración.</p>
-							</div>
-						</div>
-					</div>
 					<div class="col-xs-12 col-md-4">
 						<div class="footer-widget">
 							<div class="footer-widget-heading">
@@ -211,7 +197,7 @@
 							<div class="footer-widget-heading">
 								<h3>Seguinos</h3>
 							</div>
-							<div class="single-cta">
+							<div class="single-cta ig">
 								<a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
 							</div>
 						</div>
