--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
 				<div class=" row">
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#primero" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -99,7 +99,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#crystal" class="image" style="background-image: url(img/casas/crystal_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -109,7 +109,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#eldescanso" class="image" style="background-image: url(img/casas/eldescanso_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -119,7 +119,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/ironhaus_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -129,7 +129,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/mahimahi_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -139,7 +139,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/pacific_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -149,7 +149,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/saldelima_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -159,7 +159,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/pinebeach_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -170,7 +170,7 @@
 
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/dosmares_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -180,7 +180,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/salsabrava_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -190,7 +190,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/santapaula_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -200,7 +200,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/180south_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -210,7 +210,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/animal_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -220,7 +220,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/beton_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -230,7 +230,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/biscayne_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -240,7 +240,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/chillbeach_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -250,7 +250,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/deau_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -260,7 +260,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/fly_cat.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -270,7 +270,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/surfersparadise_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -280,7 +280,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/virazon_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -290,7 +290,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/alaia_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -300,7 +300,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/hut_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -310,7 +310,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/eleuthera_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -320,7 +320,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/lavista_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -330,7 +330,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/oldwoody_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -341,7 +341,7 @@
 
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/terrazas_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
