--- a/quienesomos.html
+++ b/quienesomos.html
@@ -150,7 +150,7 @@
 							<div class="image" style="background-image: url(img/team/b/quienesomos_04.jpg)"></div>
 							<div class="inner">
 								<header>
-									<h3>Belén Putruele</h3>
+									<h3>María Belén Putruele</h3>
 									<p>Arquitecta. Project Manager</p>
 								</header>
 							</div>
@@ -194,7 +194,7 @@
 							<div class="image" style="background-image: url(img/team/b/quienesomos_08.jpg)"></div>
 							<div class="inner">
 								<header>
-									<h3>Juana Sichiny</h3>
+									<h3>Juana Cichini</h3>
 									<p>Arquitecta</p>
 								</header>
 							</div>
@@ -205,7 +205,7 @@
 							<div class="image" style="background-image: url(img/team/b/quienesomos_09.jpg)"></div>
 							<div class="inner">
 								<header>
-									<h3>Joaquín Primon</h3>
+									<h3>Joaquín Primón</h3>
 									<p>Dibujante</p>
 								</header>
 							</div>
@@ -264,7 +264,6 @@
                     <div class="single-cta">
                         <i class="fa fa-map-marker"></i>
                         <div class="cta-text">
-                            <h4>Ubicacion</h4>
                             <span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
                         </div>
                     </div>
@@ -273,7 +272,6 @@
                     <div class="single-cta">
                         <i class="fa fa-phone"></i>
                         <div class="cta-text">
-                            <h4>Llamanos</h4>
                             <span>4737.0086</span>
                         </div>
                     </div>
@@ -282,7 +280,6 @@
                     <div class="single-cta">
                         <i class="fa fa-envelope"></i>
                         <div class="cta-text">
-                            <h4>Email</h4>
                             <span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
                         </div>
                     </div>
@@ -291,7 +288,7 @@
           </div>
           <div class="footer-content">
               <div class="row">
-                  <div class="col-xs-12 col-md-4">
+                  <!-- <div class="col-xs-12 col-md-4">
                       <div class="footer-widget">
                           <div class="footer-logo">
                               <a href="index.html"><img src="./img/logo-w.png" class="img-fluid" alt="logo"></a>
@@ -300,21 +297,21 @@
                               <p>Pacífica Arquitectura, estudio con sede en Buenos Aires, dedicado principalmente a realizar diseños y construcción de casas de alta gama, edificios, ambientación y decoración.</p>
                           </div>
                       </div>
-                  </div>
+                  </div> -->
                   <div class="col-xs-12 col-md-4">
                       <div class="footer-widget">
                           <div class="footer-widget-heading">
                               <h3>Sitio</h3>
                           </div>
                           <ul>
-																											<li><a href="portfolio.html">Casas</a></li>
-																											<li><a href="lifestyle.html">Lifestyle</a></li>
-																											<li><a href="desarrollos.html">Desarrollos</a></li>
-																											<li><a href="quienesomos.html">Quienes Somos</a></li>
-																											<li><a href="estudio.html">Fotos</a></li>
-																											<li><a href="interiores.html">Diseño de Interiores</a></li>
-																											<li><a href="contacto.html">Contacto</a></li>
-																											<li><a href="instagram.html">Instagram</a></li>
+														<li><a href="portfolio.html">Casas</a></li>
+														<li><a href="lifestyle.html">Lifestyle</a></li>
+														<li><a href="desarrollos.html">Desarrollos</a></li>
+														<li><a href="quienesomos.html">Quienes Somos</a></li>
+														<li><a href="estudio.html">Fotos</a></li>
+														<li><a href="interiores.html">Diseño de Interiores</a></li>
+														<li><a href="contacto.html">Contacto</a></li>
+														<li><a href="instagram.html">Instagram</a></li>
                           </ul>
                       </div>
                   </div>
