--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
 						<!-- <h1>Showcase your work with Rayleigh</h1> -->
 					</div>
 					<!-- Slide -->
+					<div class="swiper-slide overlay " style="background-image: url('img/slide_6.jpg')">
+						<!-- <h1>Showcase your work with Rayleigh</h1> -->
+					</div>
+					<!-- Slide -->
+					<div class="swiper-slide overlay " style="background-image: url('img/slide_7.jpg')">
+						<!-- <h1>Showcase your work with Rayleigh</h1> -->
+					</div>
+					
 
 				</div>
 			</div>
@@ -137,7 +145,7 @@
 
 			<!-- Copyright -->
 			<div>
-				<p class="copyright">© Copyright 2018 Pacifica</p>
+				<p class="copyright">© Copyright 2019 Pacifica</p>
 			</div>
 
 		</div>
@@ -145,85 +153,85 @@
 	</div>
 	<footer class="footer-section">
 		<div class="container">
-			<div class="footer-cta">
-				<div class="row">
-					<div class="col-xs-12 col-md-4">
+			<div class="row">
+				<div class="col-xs-12 col-sm-5">
+					<div class="footer-cta">
+						<div class="footer-widget-heading">
+							<h3>Pacífica</h3>
+						</div>
 						<div class="single-cta">
 							<i class="fa fa-map-marker"></i>
 							<div class="cta-text">
 								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
 							</div>
 						</div>
-					</div>
-					<div class="col-xs-12 col-md-4">
 						<div class="single-cta">
 							<i class="fa fa-phone"></i>
 							<div class="cta-text">
 								<span>4737.0086</span>
 							</div>
 						</div>
-					</div>
-					<div class="col-xs-12 col-md-4">
 						<div class="single-cta">
 							<i class="fa fa-envelope"></i>
 							<div class="cta-text">
 								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
 							</div>
 						</div>
+						<div class="single-cta">
+							<i class="fa fa-instagram"></i>
+							<div class="cta-text">
+								<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+							</div>
+						</div>
 					</div>
 				</div>
+				<div class="col-xs-12 col-sm-7">
+					<div class="footer-content">
+						<div class="row">
+							<div class="col-xs-12">
+								<div class="footer-widget">
+									<div class="footer-widget-heading">
+										<h3>Sitio</h3>
+									</div>
+									<ul>
+										<li><a href="portfolio.html">Casas</a></li>
+										<li><a href="lifestyle.html">Lifestyle</a></li>
+										<li><a href="desarrollos.html">Desarrollos</a></li>
+										<li><a href="quienesomos.html">Quienes Somos</a></li>
+										<li><a href="estudio.html">Fotos</a></li>
+										<li><a href="interiores.html">Diseño de Interiores</a></li>
+										<li><a href="contacto.html">Contacto</a></li>
+										<li><a href="instagram.html">Instagram</a></li>
+									</ul>
+								</div>
+							</div>
+							<!-- <div class="col-xs-12 col-sm-6">
+								<div class="footer-widget">
+									<div class="footer-widget-heading">
+										<h3>Seguinos</h3>
+									</div>
+									<div class="single-cta ig">
+										<a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
+									</div>
+								</div>
+							</div> -->
+						</div>
+					</div>
+				</div>
+
 			</div>
-			<div class="footer-content">
-				<div class="row">
-					<div class="col-xs-12 col-md-4">
-						<div class="footer-widget">
-							<div class="footer-widget-heading">
-								<h3>Sitio</h3>
-							</div>
-							<ul>
-								<li><a href="portfolio.html">Casas</a></li>
-								<li><a href="lifestyle.html">Lifestyle</a></li>
-								<li><a href="desarrollos.html">Desarrollos</a></li>
-								<li><a href="quienesomos.html">Quienes Somos</a></li>
-								<li><a href="estudio.html">Fotos</a></li>
-								<li><a href="interiores.html">Diseño de Interiores</a></li>
-								<li><a href="contacto.html">Contacto</a></li>
-								<li><a href="instagram.html">Instagram</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xs-12 col-md-4">
-						<div class="footer-widget">
-							<div class="footer-widget-heading">
-								<h3>Seguinos</h3>
-							</div>
-							<div class="single-cta ig">
-								<a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
-							</div>
-						</div>
-					</div>
+			<div class="sub-footer">
+				<div class="copyright-text">
+					<p>© Copyright 2019 Pacifica</p>
+				</div>
+				<div class="footer-menu">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="copyright-area">
-			<div class="container container-copy">
-				<div class="row">
-					<div class="col-xl-6 col-lg-6 col-xs-7">
-						<div class="copyright-text">
-							<p>© Copyright 2018 Pacifica</p>
-						</div>
-					</div>
-					<div class="col-xl-6 col-lg-6 col-xs-5 text-right">
-						<div class="footer-menu">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="contacto.html">Contact</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+
 	</footer>
 
 	<!-- JavaScripts -->
