--- a/lifestyle.html
+++ b/lifestyle.html
@@ -1,278 +1,268 @@
 <!doctype html>
 <html lang="en-US">
-	<head>
 
-		<!-- Meta -->
-		<meta charset="UTF-8">
-		<title>PACIFICA | Lifestyle</title>
-		<meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
-		<meta name="description" content="Pacifica - Estudio de Arquitectura">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
 
-
-		<!-- Favicons -->
-		<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-		<link rel="manifest" href="/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
-
-		<!-- CSS -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="css/idangerous.swiper.css">
-		<link rel="stylesheet" href="css/style.css">
-
-	</head>
-
-	<body>
+	<!-- Meta -->
+	<meta charset="UTF-8">
+	<title>PACIFICA | Lifestyle</title>
+	<meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
+	<meta name="description" content="Pacifica - Estudio de Arquitectura">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-		<!-- Overlay -->
-		<div id="overlay"></div>
+	<!-- Favicons -->
+	<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
-		<!-- Top header -->
-		<div id="top">
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/idangerous.swiper.css">
+	<link rel="stylesheet" href="css/style.css">
 
-			<!-- Sidebar button -->
-			<a href="#" id="sidebar-button"></a>
+</head>
 
-			<!-- Logo -->
-			<header id="logo">
-							<a href="index.html"><img src="img/logo.png" alt=""></a>
-				<!-- <h1>Pacifica</h1>
+<body>
+
+
+	<!-- Overlay -->
+	<div id="overlay"></div>
+
+	<!-- Top header -->
+	<div id="top">
+
+		<!-- Sidebar button -->
+		<a href="#" id="sidebar-button"></a>
+
+		<!-- Logo -->
+		<header id="logo">
+			<a href="index.html"><img src="img/logo.png" alt=""></a>
+			<!-- <h1>Pacifica</h1>
 				<h2>Ezequiel Gil <strong>Arquitecto</strong></h2> -->
-			</header>
+		</header>
 
-			<!-- Portfolio close button -->
-			<a href="#" id="portfolio-close"></a>
+		<!-- Portfolio close button -->
+		<a href="#" id="portfolio-close"></a>
 
-		</div>
+	</div>
 
-		<!-- Main wrapper -->
-		<div id="main-wrapper">
+	<!-- Main wrapper -->
+	<div id="main-wrapper">
 
-			<!-- Content -->
-			<div id="content" class="isotope-container">
+		<!-- Content -->
+		<div id="content" class="isotope-container">
 
-				<!-- Fluid container -->
-				<div class="container">
+			<!-- Fluid container -->
+			<div class="container">
 
-					<!-- Page heading -->
-					<div id="heading" class="row">
-						<div class="filter col-12">
+				<!-- Page heading -->
+				<div id="heading" class="row">
+					<div class="filter col-12">
 
-							<header>
-								<h1>Lifestyle</h1>
-								<h2></h2>
-							</header>
-
-
-						</div>
-					</div>
-
-					<!-- Main content -->
-					<div class="grid-gallery">
-						<div class="col-gallery">
-							<img  src="./img/lifestyle/ls_01.jpg" alt="">
-							<img  src="./img/lifestyle/ls_02.jpg" alt="">
-							<img  src="./img/lifestyle/ls_03.jpg" alt="">
-							<img  src="./img/lifestyle/ls_04.jpg" alt="">
-							<img  src="./img/lifestyle/ls_05.jpg" alt="">
-							<img  src="./img/lifestyle/ls_06.jpg" alt="">
-						</div>
-
-						<div class="col-gallery">
-							<img  src="./img/lifestyle/ls_07.jpg" alt="">
-							<img  src="./img/lifestyle/ls_08.jpg" alt="">
-							<img  src="./img/lifestyle/ls_09.jpg" alt="">
-							<img  src="./img/lifestyle/ls_10.jpg" alt="">
-							<img  src="./img/lifestyle/ls_11.jpg" alt="">
-							<img  src="./img/lifestyle/ls_12.jpg" alt="">
-						</div>
-						<div class="col-gallery">
-							<img  src="./img/lifestyle/ls_13.jpg" alt="">
-							<img  src="./img/lifestyle/ls_14.jpg" alt="">
-							<img  src="./img/lifestyle/ls_15.jpg" alt="">
-							<img  src="./img/lifestyle/ls_16.jpg" alt="">
-							<img  src="./img/lifestyle/ls_17.jpg" alt="">
-							<img  src="./img/lifestyle/ls_18.jpg" alt="">
-						</div>
-
-
+						<header>
+							<h1>Lifestyle</h1>
+							<h2></h2>
+						</header>
 
 
 					</div>
+				</div>
 
-					<!-- Pagination -->
-					<div class="pagination-row row">
-						<div class="col-12">
-
-							<ul class="pag">
-								<li><a href="#">Ver m&aacute;s</a></li>
-
-							</ul>
-
-						</div>
+				<!-- Main content -->
+				<div class="grid-gallery">
+					<div class="col-gallery">
+						<img src="./img/lifestyle/ls_01.jpg" alt="">
+						<img src="./img/lifestyle/ls_02.jpg" alt="">
+						<img src="./img/lifestyle/ls_03.jpg" alt="">
+						<img src="./img/lifestyle/ls_04.jpg" alt="">
+						<img src="./img/lifestyle/ls_05.jpg" alt="">
+						<img src="./img/lifestyle/ls_06.jpg" alt="">
 					</div>
+
+					<div class="col-gallery">
+						<img src="./img/lifestyle/ls_07.jpg" alt="">
+						<img src="./img/lifestyle/ls_08.jpg" alt="">
+						<img src="./img/lifestyle/ls_09.jpg" alt="">
+						<img src="./img/lifestyle/ls_10.jpg" alt="">
+						<img src="./img/lifestyle/ls_11.jpg" alt="">
+						<img src="./img/lifestyle/ls_12.jpg" alt="">
+					</div>
+					<div class="col-gallery">
+						<img src="./img/lifestyle/ls_13.jpg" alt="">
+						<img src="./img/lifestyle/ls_14.jpg" alt="">
+						<img src="./img/lifestyle/ls_15.jpg" alt="">
+						<img src="./img/lifestyle/ls_16.jpg" alt="">
+						<img src="./img/lifestyle/ls_17.jpg" alt="">
+						<img src="./img/lifestyle/ls_18.jpg" alt="">
+					</div>
+
+
+
 
 				</div>
 
-			</div>
+				<!-- Pagination -->
+				<div class="pagination-row row">
+					<div class="col-12">
 
-			<!-- Collapsible sidebar -->
-			<div id="sidebar">
-
-				<!-- Widget Area -->
-				<div id="widgets">
-
-					<!-- Main menu -->
-					<nav id="mainmenu">
-						<ul>
-							<li><a href="portfolio.html">Casas</a></li>
-							<li><a href="lifestyle.html">Lifestyle</a></li>
-							<li><a href="desarrollos.html">Desarrollos</a></li>
-							<li><a href="#">El Estudio</a>	<ul>
-									<li><a href="quienesomos.html">Quienes Somos</a></li>
-									<li><a href="estudio.html">Fotos</a></li>
-								</ul>
-							</li>
-							<li><a href="interiores.html">Diseño de Interiores</a></li>
-							<li><a href="contacto.html">Contacto</a></li>
-							<li><a href="instagram.html">Instagram</a></li>
+						<ul class="pag">
+							<li><a href="#">Ver m&aacute;s</a></li>
 
 						</ul>
-					</nav>
 
-				</div>
-
-				<!-- Copyright -->
-				<div>
-					<p class="copyright">© Copyright 2018 Pacifica</p>
+					</div>
 				</div>
 
 			</div>
 
 		</div>
 
-		<footer class="footer-section">
-      <div class="container">
-          <div class="footer-cta">
-            <div class="row">
-                <div class="col-xs-12 col-md-4">
-                    <div class="single-cta">
-                        <i class="fa fa-map-marker"></i>
-                        <div class="cta-text">
-                            <h4>Ubicacion</h4>
-                            <span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <div class="single-cta">
-                        <i class="fa fa-phone"></i>
-                        <div class="cta-text">
-                            <h4>Llamanos</h4>
-                            <span>4737.0086</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    <div class="single-cta">
-                        <i class="fa fa-envelope"></i>
-                        <div class="cta-text">
-                            <h4>Email</h4>
-                            <span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-          </div>
-          <div class="footer-content">
-              <div class="row">
-                  <div class="col-xs-12 col-md-4">
-                      <div class="footer-widget">
-                          <div class="footer-logo">
-                              <a href="index.html"><img src="./img/logo-w.png" class="img-fluid" alt="logo"></a>
-                          </div>
-                          <div class="footer-text">
-                              <p>Pacífica Arquitectura, estudio con sede en Buenos Aires, dedicado principalmente a realizar diseños y construcción de casas de alta gama, edificios, ambientación y decoración.</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-xs-12 col-md-4">
-                      <div class="footer-widget">
-                          <div class="footer-widget-heading">
-                              <h3>Sitio</h3>
-                          </div>
-                          <ul>
-																											<li><a href="portfolio.html">Casas</a></li>
-																											<li><a href="lifestyle.html">Lifestyle</a></li>
-																											<li><a href="desarrollos.html">Desarrollos</a></li>
-																											<li><a href="quienesomos.html">Quienes Somos</a></li>
-																											<li><a href="estudio.html">Fotos</a></li>
-																											<li><a href="interiores.html">Diseño de Interiores</a></li>
-																											<li><a href="contacto.html">Contacto</a></li>
-																											<li><a href="instagram.html">Instagram</a></li>
-                          </ul>
-                      </div>
-                  </div>
-                  <div class="col-xs-12 col-md-4">
-                      <div class="footer-widget">
-                          <div class="footer-widget-heading">
-                              <h3>Seguinos</h3>
-                          </div>
-                          <div class="single-cta">
-                              <a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="copyright-area">
-          <div class="container container-copy">
-              <div class="row">
-                  <div class="col-xl-6 col-lg-6 col-xs-7">
-                      <div class="copyright-text">
-                          <p>© Copyright 2018 Pacifica</p>
-                      </div>
-                  </div>
-                  <div class="col-xl-6 col-lg-6 col-xs-5 text-right">
-                      <div class="footer-menu">
-                          <ul>
-                              <li><a href="index.html">Home</a></li>
-                              <li><a href="contacto.html">Contact</a></li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </footer>
+		<!-- Collapsible sidebar -->
+		<div id="sidebar">
 
-		<!-- JavaScripts -->
-		<script type='text/javascript' src='js/jquery.min.js'></script>
-		<script type='text/javascript' src='js/bootstrap.min.js'></script>
-		<script type='text/javascript' src='js/swiper/idangerous.swiper.min.js'></script>
-		<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
-		<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
-		<script type='text/javascript' src='js/custom.js'></script>
+			<!-- Widget Area -->
+			<div id="widgets">
 
-	</body>
+				<!-- Main menu -->
+				<nav id="mainmenu">
+					<ul>
+						<li><a href="portfolio.html">Casas</a></li>
+						<li><a href="lifestyle.html">Lifestyle</a></li>
+						<li><a href="desarrollos.html">Desarrollos</a></li>
+						<li><a href="#">El Estudio</a>
+							<ul>
+								<li><a href="quienesomos.html">Quienes Somos</a></li>
+								<li><a href="estudio.html">Fotos</a></li>
+							</ul>
+						</li>
+						<li><a href="interiores.html">Diseño de Interiores</a></li>
+						<li><a href="contacto.html">Contacto</a></li>
+						<li><a href="instagram.html">Instagram</a></li>
+
+					</ul>
+				</nav>
+
+			</div>
+
+			<!-- Copyright -->
+			<div>
+				<p class="copyright">© Copyright 2018 Pacifica</p>
+			</div>
+
+		</div>
+
+	</div>
+
+	<footer class="footer-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-5">
+					<div class="footer-cta">
+						<div class="footer-widget-heading">
+							<h3>Pacífica</h3>
+						</div>
+						<div class="single-cta">
+							<i class="fa fa-map-marker"></i>
+							<div class="cta-text">
+								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+							</div>
+						</div>
+						<div class="single-cta">
+							<i class="fa fa-phone"></i>
+							<div class="cta-text">
+								<span>4737.0086</span>
+							</div>
+						</div>
+						<div class="single-cta">
+							<i class="fa fa-envelope"></i>
+							<div class="cta-text">
+								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+							</div>
+						</div>
+						<div class="single-cta">
+							<i class="fa fa-instagram"></i>
+							<div class="cta-text">
+								<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-7">
+					<div class="footer-content">
+						<div class="row">
+							<div class="col-xs-12">
+								<div class="footer-widget">
+									<div class="footer-widget-heading">
+										<h3>Sitio</h3>
+									</div>
+									<ul>
+										<li><a href="portfolio.html">Casas</a></li>
+										<li><a href="lifestyle.html">Lifestyle</a></li>
+										<li><a href="desarrollos.html">Desarrollos</a></li>
+										<li><a href="quienesomos.html">Quienes Somos</a></li>
+										<li><a href="estudio.html">Fotos</a></li>
+										<li><a href="interiores.html">Diseño de Interiores</a></li>
+										<li><a href="contacto.html">Contacto</a></li>
+										<li><a href="instagram.html">Instagram</a></li>
+									</ul>
+								</div>
+							</div>
+							<!-- <div class="col-xs-12 col-sm-6">
+								<div class="footer-widget">
+									<div class="footer-widget-heading">
+										<h3>Seguinos</h3>
+									</div>
+									<div class="single-cta ig">
+										<a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
+									</div>
+								</div>
+							</div> -->
+						</div>
+					</div>
+				</div>
+
+			</div>
+			<div class="sub-footer">
+				<div class="copyright-text">
+					<p>© Copyright 2019 Pacifica</p>
+				</div>
+				<div class="footer-menu">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+	</footer>
+
+	<!-- JavaScripts -->
+	<script type='text/javascript' src='js/jquery.min.js'></script>
+	<script type='text/javascript' src='js/bootstrap.min.js'></script>
+	<script type='text/javascript' src='js/swiper/idangerous.swiper.min.js'></script>
+	<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
+	<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
+	<script type='text/javascript' src='js/custom.js'></script>
+
+</body>
+
 </html>
